--- a/lms/templates/seq_module.html
+++ b/lms/templates/seq_module.html
@@ -1,4 +1,15 @@
 <div id="sequence_${element_id}" class="sequence" data-id="${item_id}" data-position="${position}" data-course_modx_root="/course/modx" >
+  <div class="student-progress">
+    <div class="summary">
+      Overall: <span class="overall-progress"> </span>
+      
+    </div>
+    <div class="details">
+      Scores:
+      <ul class="progress-score-list">
+      </ul>
+    </div>
+  </div>
   <nav aria-label="Section Navigation" class="sequence-nav">
     <div class="sequence-list-wrapper">
       <ol id="sequence-list">
