--- a/xmodule/assets/sequence/_display.scss
+++ b/xmodule/assets/sequence/_display.scss
@@ -5,9 +5,9 @@
 @import 'bootstrap/scss/mixins/breakpoints';
 @import 'lms/theme/variables-v1';
 
-$seq-nav-border-color: $border-color !default;
+$seq-nav-border-color: var(--border-color) !default;
 $seq-nav-hover-color: rgb(245, 245, 245) !default;
-$seq-nav-link-color: $link-color !default;
+$seq-nav-link-color: var(--link-color) !default;
 $seq-nav-icon-color: rgb(10, 10, 10) !default;
 $seq-nav-icon-color-muted: rgb(90, 90, 90) !default;
 $seq-nav-tooltip-color: rgb(51, 51, 51) !default;
@@ -69,7 +69,7 @@ $seq-nav-height: 50px;
 .sequence-nav {
   @extend .topbar;
 
-  margin: 0 auto $baseline;
+  margin: 0 auto var(--baseline);
   position: relative;
   border-bottom: none;
   z-index: 0;
@@ -172,14 +172,14 @@ $seq-nav-height: 50px;
 
           margin-top: 12px;
           background: $seq-nav-tooltip-color;
-          color: $white;
-          font-family: $font-family-sans-serif;
+          color: var(--white);
+          font-family: var(--font-family-sans-serif);
           line-height: lh();
           right: 0;  // Should not be RTLed, tooltips do not move in RTL
           padding: 6px;
           position: absolute;
           top: 48px;
-          text-shadow: 0 -1px 0 $black;
+          text-shadow: 0 -1px 0 var(--black);
           white-space: pre;
           pointer-events: none;
 
@@ -239,7 +239,7 @@ $seq-nav-height: 50px;
     text-overflow: ellipsis;
 
     span:not(:last-child) {
-      @include padding-right($baseline / 2);
+      @include padding-right(var(--baseline) / 2);
     }
   }
 
