--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_footer.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_footer.html
@@ -35,19 +35,19 @@
                     {% if footer_email_reason %}
                         {{ footer_email_reason }}
                     {% else %}
-                        {% trans "You are receiving this email because you have subscribed to email digest" %}
+                        {% trans "You are receiving this email because you have subscribed to email digest" as tmsg %}{{ tmsg | force_escape }}
                     {% endif %}
                 </p>
                 <p style="margin: 0.625rem 0">
                     <a href="{{notification_settings_url}}" rel="noopener noreferrer" target="_blank" style="color: black">
-                        {% trans "Notification Settings" %}
+                        {% trans "Notification Settings" as tmsg %}{{ tmsg | force_escape }}
                     </a>
                     <a href="{{unsubscribe_url}}" rel="noopener noreferrer" target="_blank" style="color: black; margin-left: 1rem">
-                        {% trans "Unsubscribe from email digest for learning activity" %}
+                        {% trans "Unsubscribe from email digest for learning activity" as tmsg %}{{ tmsg | force_escape }}
                     </a>
                 </p>
                 <p>
-                    &copy; {% now "Y" %} {{ platform_name }}. All Rights Reserved <br/>
+                    &copy; {% now "Y" %} {{ platform_name }}. {% trans "All rights reserved" as tmsg %}{{ tmsg | force_escape }} <br/>
                     {{ mailing_address }}
                 </p>
             </td>
