--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_header.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_header.html
@@ -9,7 +9,7 @@
         <tr align="right">
             <td>
                 <a href="{{unsubscribe_url}}" rel="noopener noreferrer" target="_blank" style="color: white; text-decoration: none; font-size: 12px; line-height: 10px">
-                    {% trans "Unsubscribe" %}
+                    {% trans "Unsubscribe" as tmsg %}{{ tmsg | force_escape }}
                 </a>
             </td>
         </tr>
@@ -22,9 +22,9 @@
         <tr align="center">
             <td style="font-family: Inter, Arial, Verdana, sans-serif; font-size: 32px; font-style: normal; font-weight: 700; line-height: 36px">
                 {% if digest_frequency == "Weekly" %}
-                    {% trans "Weekly email digest" %}
+                    {% trans "Weekly email digest" as tmsg %}{{ tmsg | force_escape }}
                 {% else %}
-                    {% trans "Daily email digest" %}
+                    {% trans "Daily email digest" as tmsg %}{{ tmsg | force_escape }}
                 {% endif %}
             </td>
         </tr>
