--- a/openedx/core/djangoapps/notifications/templates/notifications/immediate_email_content.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/immediate_email_content.html
@@ -4,7 +4,9 @@
         <img src="{{ logo_url }}" style="width: auto;" height="40" alt="Logo"/>
     </span>
     <span style="float: right">
-        <a href="{{ unsubscribe_url }}" style="color: #00262B; text-decoration: none;">{% trans "Unsubscribe" %}</a>
+        <a href="{{ unsubscribe_url }}" style="color: #00262B; text-decoration: none;">
+            {% trans "Unsubscribe" as tmsg %}{{ tmsg | force_escape }}
+        </a>
     </span>
 </blockquote>
 <blockquote style="margin: 0; padding: 24px;">
@@ -22,7 +24,7 @@
     <blockquote style="margin: 0; padding: 10px 0">
         <p style="margin: 0; padding: 10px 16px; background-color: #D63328; width: fit-content;">
             <a href="{{ content_url }}" style="font-weight: 500; font-size: 18px; line-height: 24px; color: #FFFFFF; text-decoration: none">
-                {% trans "View" %} {{ view_text|default:""}}
+                {% trans "View" as tmsg %}{{ tmsg | force_escape }} {{ view_text|default:""}}
             </a>
         </p>
     </blockquote>
